# ChangeLog for sys-libs/slang
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/slang/ChangeLog,v 1.118 2010/05/24 18:51:07 pacho Exp $

  24 May 2010; Pacho Ramos <pacho@gentoo.org> slang-2.2.2.ebuild:
  stable amd64, bug 318313

  22 May 2010; Raúl Porcel <armin76@gentoo.org> slang-2.2.2.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #318313

  17 May 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> slang-2.2.2.ebuild:
  x86 stable wrt bug #318313

  11 May 2010; Brent Baude <ranger@gentoo.org> slang-2.2.2.ebuild:
  stable ppc64, bug 318313

  10 May 2010; nixnut <nixnut@gentoo.org> slang-2.2.2.ebuild:
  ppc stable #318313

  07 May 2010; Jeroen Roovers <jer@gentoo.org> slang-2.2.2.ebuild:
  Stable for HPPA (bug #318313).

  03 May 2010; Samuli Suominen <ssuominen@gentoo.org> slang-2.2.2.ebuild:
  Make sure -ltermcap is not used wrt #276787 by Michal Janke.

  17 Dec 2009; Raúl Porcel <armin76@gentoo.org> slang-2.2.0.ebuild:
  ia64/s390/sh/sparc stable wrt #287733

*slang-2.2.2 (08 Dec 2009)

  08 Dec 2009; MATSUU Takuto <matsuu@gentoo.org> +slang-2.2.2.ebuild:
  Version bumped.

  31 Oct 2009; Brent Baude <ranger@gentoo.org> slang-2.2.0.ebuild:
  Marking slang-2.2.0 ppc64 for bug 287733

  25 Oct 2009; Markus Meier <maekke@gentoo.org> slang-2.2.0.ebuild:
  arm stable, bug #287733

  21 Oct 2009; Markus Meier <maekke@gentoo.org> slang-2.2.0.ebuild:
  x86 stable, bug #287733

  12 Oct 2009; Jeroen Roovers <jer@gentoo.org> slang-2.2.0.ebuild:
  Stable for HPPA (bug #287733).

  11 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> slang-2.2.0.ebuild:
  amd64 stable wrt #287733

  11 Oct 2009; Tobias Klausmann <klausman@gentoo.org> slang-2.2.0.ebuild:
  Stable on alpha, bug #287733

*slang-2.2.1 (07 Oct 2009)

  07 Oct 2009; MATSUU Takuto <matsuu@gentoo.org> +slang-2.2.1.ebuild:
  Version bumped, bug #288082.

  07 Oct 2009; nixnut <nixnut@gentoo.org> slang-2.2.0.ebuild:
  ppc stable #287733
