@@ -1,9 +1,9 @@
 AUX slang-2.1.2-slsh-libs.patch 637 RMD160 0c8b60cf026ab7fc5ad079f04766b907325ed4df SHA1 fd1a58367e2d94f55154d66fedfe69fe921cb794 SHA256 fe5e969a51b6de0874c6b903dcf0ad21f6d5b27813e0e4c79a4dc929ab737ea8
 AUX slang-2.1.3-interix.patch 384 RMD160 6bb3451ba21e6f0219ff1df62490af3f7969d628 SHA1 8e9365a04f357d2e38955159990db69473eef6c4 SHA256 03f91a6896fbdc2151fb9d01d40be40cc45f56e7ea0412d7d685d989be41f59f
 AUX slang-2.1.3-uclibc.patch 494 RMD160 28ce3d06e5554697bf90f4991128820b19aba11e SHA1 a09a554c6166d81e223a77edc629a19bb8bf0b53 SHA256 7b88890ae8787617065d693f0469b2d462148964e3de9d74e28c0b202590fd69
-DIST slang-2.2.0.tar.bz2 1353374 RMD160 f4db281816e750255288ba9c7f2d8d1ec30120cf SHA1 9dcc1e94193435e97e779ec9dd9b06561d4b1812 SHA256 dfbb7ab43ef7d8367640553e219a28e5656a69742477337d104d9a2818382f64
 DIST slang-2.2.2.tar.bz2 1366850 RMD160 d642c7d513aee198ad5d6d1b710c5c0f65dc381a SHA1 13bb6344f71779cad8c05e1b6b1ef2d073888d58 SHA256 cfaf8551fa3855f9b0043309bb553ef6d457f931b404df5a6ba6a5a69371fc42
-EBUILD slang-2.2.0.ebuild 1609 RMD160 bc9ed11d1439c09a327e912ab69f635368e648ca SHA1 8eabacbf2a2018e52ac9bb2e8c176daa5dca1c9e SHA256 9f0440ed54f1ca97be4293a86a55c82c599612950464fb3b329aa511d5d88037
-EBUILD slang-2.2.2.ebuild 1666 RMD160 a4c6c4d4f1d3080e1593c3c0708fa088e483901f SHA1 77d3394935c7a0e9d4d5d3d715ff2bce54a95e7e SHA256 ca64f0962c1207bbbfdd3a5c245d5550d6a8b6b5ac7fc6770704d8468142b575
-MISC ChangeLog 15142 RMD160 9667d61edb3bf8f968538c9054ba4451815e681e SHA1 cd3d16d428a9f59e8e328ac787499455120b6f52 SHA256 dde3d4ddcc49fc05206318223e5bee0762f20fdc9835bb3e4cb589c3c4bb37cc
+DIST slang-2.2.3.tar.bz2 1424726 RMD160 ca4c8d0a594b76fc6d2bcc62a5f5b3b6edc24535 SHA1 a474b02f8fcaf979ac677aa4f50e8f210d124d01 SHA256 6f69809e463ff98db1dd6591c5b8d023400a56c53734ecba6db7fca8dd2e7a41
+EBUILD slang-2.2.2.ebuild 1640 RMD160 5a73eee9a1f61805534843e93cc7745634827335 SHA1 cea35894cc2ad00f9284a4a91b365c205f9b9202 SHA256 0efe2bd9195a7271cafb78fcce96d1398eec016ebae12a511caf9e669f5ceb4a
+EBUILD slang-2.2.3.ebuild 1621 RMD160 0da101e89de62e96cbeb3fea0a511b5f403116c6 SHA1 091122e1bf4938fb2db9cd2b4520a4ad1e2650ff SHA256 bf156c588678a417f6a4d3bd0998dd1d4fc2667e286af8bba492bf1e5cf03fe7
+MISC ChangeLog 15304 RMD160 120315d1aeada5fdf761d57ec52d012f3f6ebe51 SHA1 33ad5d55f726e219aece454343555b3b961c9d74 SHA256 0286fd8685260b973c7cabf95db3feed96d783fe3505484f0edca7c82effc606
 MISC metadata.xml 157 RMD160 1305e8c09c6d49c0db2a18bb50b045460c124ebe SHA1 874689ae30dfe223d487e0e6a5e0a0dbf06a69f4 SHA256 c3c089740b31ec0f4d7fbc3bf2d6bb8460ccfd0694f01bf91b22a2e1930d6d5d
