@@ -1,6 +1,12 @@
 # ChangeLog for sys-libs/slang
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/slang/ChangeLog,v 1.118 2010/05/24 18:51:07 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/slang/ChangeLog,v 1.119 2010/12/27 12:51:44 ssuominen Exp $
+
+*slang-2.2.3 (27 Dec 2010)
+
+  27 Dec 2010; Samuli Suominen <ssuominen@gentoo.org> +slang-2.2.3.ebuild,
+  +files/slang-2.2.3-slsh-libs.patch:
+  Version bump.
 
   24 May 2010; Pacho Ramos <pacho@gentoo.org> slang-2.2.2.ebuild:
   stable amd64, bug 318313
